convertido proyecto a estructura de Cmake

--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,10 @@ x86/
 [Aa][Rr][Mm]64/
 bld/
 [Bb]in/
+[Bb]uild/
 [Oo]bj/
 [Ll]og/
+.vscode
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
