--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -7,6 +7,12 @@ cmake_minimum_required (VERSION 3.1)
 project (emuASM)
 set(CMAKE_CXX_STANDARD 17)
 
+set(GNU_compile_flags
+	-fms-extensions
+)
+
+
+
 
 set(terminal_src
 	src/terminal.cpp
@@ -57,8 +63,15 @@ IF(linux)
 	include_directories(${GTKMM_INCLUDE_DIRS})
 	target_link_libraries(${PROJECT_NAME} ${GTKMM_LIBRARIES})
 
-ENDIF()
+	if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+		target_compile_options(${PROJECT_NAME} PRIVATE ${GNU_compile_flags})
+	endif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
 
+	set(THREADS_PREFER_PTHREAD_FLAG ON)
+		find_package(Threads REQUIRED)
+	target_link_libraries(${PROJECT_NAME} Threads::Threads)
+
+ENDIF()
 
 
 #cmake_minimum_required (VERSION 3.0)
