--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -12,6 +12,25 @@ set(GNU_compile_flags
 )
 
 
+include_directories(${Qt5Widgets_INCLUDE_DIRS} ${QtQml_INCLUDE_DIRS})
+add_definitions(${Qt5Widgets_DEFINITIONS} ${QtQml_DEFINITIONS} ${${Qt5Quick_DEFINITIONS}})
+
+
+
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
+
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+set(CMAKE_AUTOUIC ON)
+
+
+
+find_package(Qt5 COMPONENTS Widgets REQUIRED)
+
+qt5_add_resources(QT_RESOURCES qml.qrc)
+
+
+
 
 set(cpu_src
 	src/CPUoperations.cpp
@@ -44,6 +63,7 @@ set(src
 	src/source.cpp
 	${cpu_src}
 	${UI_src}
+	${QT_RESOURCES}
 )
 
 
@@ -109,6 +129,17 @@ IF(linux)
 
 ENDIF()
 
+
+set(QT_LINK_LIBS
+	Qt5::Widgets
+	Qt5::Qml
+    Qt5::Quick
+	Qt5::QuickControls2
+)
+
+target_link_libraries(${PROJECT_NAME} 
+	${QT_LINK_LIBS}
+)
 
 #add_custom_command(
 #        TARGET foo POST_BUILD
